--- a/package.json
+++ b/package.json
@@ -7,13 +7,19 @@
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts"
   },
   "dependencies": {
+    "@types/csv-parse": "^1.2.2",
+    "@types/multer": "^1.4.7",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "csv-parse": "^5.0.3",
     "eslint-config-airbnb-base": "^15.0.0",
     "express": "^4.17.1",
+    "multer": "^1.4.3",
+    "swagger-ui-express": "^4.1.6",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.3",
     "eslint": "^7.32.0",
     "ts-node-dev": "^1.1.8",
